Update README.md
Added a note about VM arguments in Eclipse